welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:23: error: value lenght is not a member of Array[java.awt.Color]
	setCouleurBrosse(T((T.lenght-1+decalage)%T.length))
                              ^